<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zadi</string>
    <string name="share_app">share app</string>
    <string name="language">language</string>
    <string name="auth_hint_first_name">first name </string>
    <string name="auth_create_account"><u>create new account</u></string>
    <string name="auth_hint_password">password</string>
    <string name="auth_forget_password">forget password ?</string>
    <string name="auth_hint_last_name">last name </string>
    <string name="auth_no_internet_con">no internet connection</string>
    <string name="auth_enter_password_hint">password</string>
    <string name="auth_verify">Verfiy</string>
    <string name="auth_invalid_code">invalid verification code</string>
    <string name="auth_recov_pass_title">reset password </string>
    <string name="auth_hint_password_conf">confirm password</string>
    <string name="auth_pass_less">password must be at lest 8 chars</string>
    <string name="auth_pass_not_match">password not maching</string>
    <string name="auth_save">save</string>
    <string name="auth_loigin">Login</string>
    <string name="auth_logout">Logout </string>
    <string name="cancel">cancel</string>
    <string name="search">search</string>
    <string name="next">next</string>
    <string name="lang">lang_key</string>
    <string name="auth_send_code">send verification code</string>
    <string name="auth_enter_code">Enter code </string>
    <string name="auth_enter_verify_code">enter verification code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">@string/home</string>
    <string name="home">Home</string>
    <string name="my_account">my account</string>
    <string name="settings">settings</string>
    <string name="fav">favorites</string>
    <string name="enter_email">enter email</string>
    <string name="enter_full_name">enter full name</string>
    <string name="title_activity_my_account">my account</string>
    <string name="save">save</string>
    <string name="mail_sent">mail sent successfully</string>
    <string name="email_verf_failed">email verification failed</string>
    <string name="tap_view_cart">tap to view cart</string>
    <string name="no_items_yet">no products in your cart</string>
    <string name="show_cart">show cart</string>


    <string name="select_country">country</string>
    <string name="TAG_COUNTRY_CODE">tag_country_flag</string>
    <string name="TAG_COUNTRY_POSITION">tag_country_pos</string>
    <string name="agin_to_exist">Please click BACK again to exit</string>
    <string name="product_name">item name</string>
    <string name="product_desc">item description</string>
    <string name="_price">item price</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="title_activity_details">Details</string>
    <string name="email_not_vaid">Email Not Valid</string>
    <string name="mailorpassinvalid">Email or Password is Invalid</string>
    <string name="server_error">Server Error ,plz let me know that</string>
    <string name="mail_is_registred_use_another_or_login">email is already registered, plz use another mail or login if it\'s yors.</string>
    <string name="wrong_mail">email is wrong,try again.</string>
    <string name="email">E-Mail</string>
    <string name="add_food">add foods</string>
    <string name="add">Add</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="show_more">show more</string>
    <string name="done">Done</string>
    <string name="total">Total</string>
    <string name="r">RS</string>
    <string name="conf_del">do you want to delete this product?</string>
    <string name="delete">delete</string>
    <string name="not_compatable">this product not compatable with you</string>
    <string name="alert">Alert</string>
    <string name="get_it">Get it</string>
    <string name="back">Back</string>
    <string name="delete_from_cart">delete from cart !</string>
    <string name="name">name :</string>
    <string name="phone">phone :</string>
    <string name="address">address :</string>
    <string name="item_name">item name</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="submit_order">Submit Order</string>
    <string name="time">order time :</string>
    <string name="order_done">your order submitted successfully</string>
    <string name="close_app">Exit</string>
    <string name="order_number">order number</string>
    <string name="stuff">Stuff</string>
    <string name="student">Student</string>
    <string name="desc">description</string>
    <string name="show_orders">Show Orders</string>
    <string name="delivered">Delivery Done</string>
    <string name="deliver">Deliver</string>
    <string name="recieve_time">receive time :</string>
    <string name="delivery">Delevery (free) :</string>
    <string name="just_order">just order</string>
    <string name="order_delivery">order + delevery</string>
    <string name="delever_item">delivery :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_food_deseases">select food uncompilable diseases if exist</string>
    <string name="select_your_diseases">select disease(s) you suffer from?(tap done without selecting if you have no) </string>
    <string name="nothing">Nothing</string>
    <string name="your_diseases">Your Diseases</string>
    <string name="diseases_updated">your diseases list updated</string>
    <string name="manage_cats">manage categories</string>
    <string name="manage_users">manage users</string>
    <string name="cat_name_en">name</string>
    <string name="cat_name_ar">الاسم</string>
    <string name="conf_del_cat">delete this category?</string>
    <string name="account_deleted">this account deleted by admin</string>
    <string name="cats">Categories</string>
    <string name="less_quantity">Less Quantity</string>
    <string name="enter_max_qantity">max quantity</string>
    <string name="close">Close</string>
    <string name="rate_title">Rate Us</string>
    <string name="optional">write a comment (optional)</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="dnotshowag">do not show this again</string>
    <string name="there_some_items_about_to_consumed_with_very_low_quantity">there some items about to consumed with very low quantity.</string>
    <string name="number_of_items">number of items :</string>
    <string name="show_details">show details</string>
    <string name="do_not_show_this_today_again">do not show this today again.</string>
    <string name="alert_when_less_than">Items Amount Notify when be less than</string>
    <string name="alert_less_amount_settings_key">alert_key_01</string>
    <string name="items_amount_alert">items amount alert</string>
    <string name="alert_every_key">alert_every</string>
    <string name="alert_every">alert every</string>
    <string name="m_15">15m</string>
    <string name="item_updated">Item Updated Successfully</string>
    <string name="conf_del_disease">do you want delete?</string>
    <string name="manage_diseases">manage diseases</string>
    <string name="not_con">no internet connection</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="new_order">new Order</string>
    <string name="have_req">have requested asn order,tap to details</string>

</resources>