<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="en"
        android:entries="@array/listLanguages"
        android:entryValues="@array/languageValues"
        android:key="@string/lang"
        android:summary="english"
        android:title="@string/language" />
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="@string/items_amount_alert">
        <ListPreference
            android:defaultValue="30"
            android:entries="@array/alert_less_values"
            android:entryValues="@array/alert_less_values_"
            android:key="@string/alert_every_key"
            android:summary="@string/m_15"
            android:title="@string/alert_every" />

        <ListPreference
            android:defaultValue="10"
            android:entries="@array/alert_less_amount_values"
            android:entryValues="@array/alert_less_amount_values"
            android:key="@string/alert_less_amount_settings_key"
            android:summary="10"
            android:title="@string/quantity" />
    </PreferenceCategory>
</PreferenceScreen>