<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/rate_title"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <RatingBar
        android:id="@+id/rateBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="50dp"
        android:numStars="5"
        android:soundEffectsEnabled="true" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="#00000000"
        android:hint="@string/optional"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_selector"
            android:gravity="center"
            android:text="@string/rate"
            android:textColor="@color/link"
            android:textSize="16dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_selector"
            android:gravity="center"
            android:text="@string/later"
            android:textColor="@color/link"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/dontshowcb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dnotshowag"
        android:textSize="15dp" />

</LinearLayout>