<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/alert"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title"
        android:background="#7ccc" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp1"
        android:padding="20dp"
        android:text="@string/there_some_items_about_to_consumed_with_very_low_quantity"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body"
        android:paddingStart="20dp"
        android:text="@string/number_of_items"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body"
        android:layout_toEndOf="@+id/title2"
        android:paddingStart="10dp"
        android:text="x"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/dir_to_less_quantity_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count"
        android:padding="20dp"
        android:text="@string/show_details"
        android:textColor="@color/link"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/dontshowagaintodaychbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dir_to_less_quantity_activity"
        android:layout_marginStart="20dp"
        android:button="@drawable/check_selector"
        android:padding="10dp"
        android:text="@string/do_not_show_this_today_again"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/dontshowagaintodaychbx"
        android:padding="5dp"
        android:src="@drawable/ic_settings_black_24dp" />

    <TextView
        android:id="@+id/sp2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/settings"
        android:background="#7ccc" />

    <TextView
        android:id="@+id/close"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sp2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_selector"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/btn_txt_color" />

</RelativeLayout>