<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".2"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/placeholder"
                android:textCursorDrawable="@null"
                android:visibility="gone" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/auth_input_bg"
                android:hint="@string/auth_hint_first_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textStyle="normal">

                <requestFocus />
            </EditText>


            <EditText
                android:id="@+id/last_name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/auth_input_bg"
                android:hint="@string/auth_hint_last_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/auth_input_bg"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/auth_input_bg"
                android:gravity="start"
                android:hint="@string/auth_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/conf_pass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/auth_input_bg"
                android:hint="@string/auth_hint_password_conf"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/stuff"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_btn_bg"
                    android:gravity="center"
                    android:text="@string/stuff"
                    android:textColor="@color/switch_text_color"
                    android:textSize="20dp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/student"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switch_btn_bg"
                    android:gravity="center"
                    android:text="@string/student"
                    android:textColor="@color/switch_text_color"
                    android:textIsSelectable="true"
                    android:textSize="20dp"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/just_order"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/save"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_btn_sellector"
                android:gravity="center"
                android:text="@string/auth_save"
                android:textColor="@drawable/auth_btn_text_color"
                android:textSize="22dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>