<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/auth_enter_verify_code"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />


    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/code"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        android:background="@drawable/auth_input_bg"
        android:hint="######"
        android:inputType="number"
        android:gravity="center"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/link"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/verify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_selector"
            android:gravity="center"
            android:text="@string/auth_verify"
            android:textColor="@color/link"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>