<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cafateria.activities.OrderDone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:scaleType="fitXY"
            android:src="@drawable/bg" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/order_done"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/order_number"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/order_number"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="16dp"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:onClick="home"
            android:layout_weight="1"
            android:background="@drawable/create_btn_selector"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/btn_txt_color"
            android:textSize="17dp" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/create_btn_selector"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:onClick="exit"
            android:text="@string/close_app"
            android:textAllCaps="false"
            android:textColor="@color/btn_txt_color"
            android:textSize="17dp" />
    </LinearLayout>

</RelativeLayout>
