<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".2"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:weightSum="4">

            <!-- logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:src="@mipmap/ic_launcher"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_input_bg"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sendcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/login_btn_selector"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/auth_send_code"
                android:textAllCaps="false"
                android:textColor="@color/btn_txt_color"
                android:textSize="17dp" />

            <!--login group-->


            <!-- forget password link -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:weightSum="4"></LinearLayout>

        </LinearLayout>
    </ScrollView>
    <!-- create account link -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/create_btn_selector"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/auth_enter_code"
        android:textAllCaps="false"
        android:textColor="@color/btn_txt_color"
        android:textSize="17dp" />
</RelativeLayout>